# NPX

./: .gitignore  Mapping Notizen 21.docx  README.md  ford.py  ford2.py  pyproject.toml  zpx2npx.docx  zpx2npx.xsl
src/: ford2.py  ford3.py
src/NPX/: __init__.py  ford2.py  ford3.py
src/data/xsl/: konsAuflagen_v2.xsl  mm_v2.xsl  npx_v1-alleAssets.xsl  npx_v2-alleAssets.xsl  npx_v2.xsl  so_v1.xsl  so_v2.xsl
src/data/xsl/Alt/: ListeFreigegebeneDigitalisate.xsl
xsl/: Korrekturbogen-Erwerbzusammenhang.xsl  fix.xsl  join_npx.xsl  konsAuflagen_v2.xsl  konservAuflagen.xsl  mm.xsl  mm_v2.xsl  npx_v1.xsl  npx_v2-alleAssets.xsl  npx_v2.xsl  so.xsl  so_v2.xsl  splitPack.xsl  splitzpx.xsl  zpx2npx-alleAssets.xsl  zpx2npx.xsl  zpx2waf.xsl
xsl/Alt/: fix.xsl
